test/preprocessor/invalid/undef.glsl
#undef
#undef 42
#undef TEST
#undef TEST1 TEST2
